text alignment and hover fix

--- a/src/main/resources/public/css/jeopardy.css
+++ b/src/main/resources/public/css/jeopardy.css
@@ -1,6 +1,8 @@
 body {
     background-color: #097a9d;
+
 }
+
 
 .task-table {
     border-collapse: collapse;
@@ -10,12 +12,18 @@ body {
 }
 
 .task-table td, .task-table th {
+
     border: 1px solid #000000;
     padding: 10px;
+    text-align: center;
+
 }
 
 .task-table tr:nth-child(even) {
     background-color: silver;
+}
+td:hover {
+    background-color: #D6EEEE;
 }
 
 .toggle {
@@ -36,6 +44,15 @@ body {
 
 .toggle:checked + label + .answer {
     display: block;
+
+}
+
+.task-table input[type="checkbox"]:checked::before {
+    counter-increment: total-points;
+}
+
+#total-points::before {
+    content: counter(total-points);
 }
 
 .team-setup {
@@ -65,4 +82,5 @@ body {
 .team input[type="number"] {
     width: 100%;
     margin-bottom: 10px;
+
 }
